--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+/tools/
+/tools/**/vendor/
+/tools/**/composer.lock
+.php-cs-fixer.cache
