--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "lakaan/mvc-course",
+    "description": "MVC-kursen VT2024",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
@@ -85,7 +87,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "csfix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --config=tools/php-cs-fixer/.php-cs-fixer.dist.php fix src tests",
+        "csfix:dry": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --config=tools/php-cs-fixer/.php-cs-fixer.dist.php fix src tests --dry-run -vv"
     },
     "conflict": {
         "symfony/symfony": "*"
