--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lakaan/mvc-course",
+    "name": "kaae22/mvc-course",
     "description": "MVC-kursen VT2024",
     "type": "project",
     "license": "proprietary",
@@ -58,12 +58,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Kaae22\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "tests/",
+            "Kaae22\\Tests\\": "tests/"
         }
     },
     "replace": {
